--- a/12.html
+++ b/12.html
@@ -774,6 +774,7 @@
 
 			} catch (error) {
 				log(`Ошибка подключения: ${error}`, 'error');
+				disconnectDevice();
 				updateConnectionStatus(false);
 			}
 		}
