--- a/BDF Audio Player.html
+++ b/BDF Audio Player.html
@@ -828,7 +828,7 @@
 					}
 
 					// Рисуем сетку
-					drawGrid(width, height);
+					// drawGrid(width, height);
 
 				} catch (error) {
 					console.error('Ошибка при рисовании графика:', error);
