--- a/Web BLE Controller.html
+++ b/Web BLE Controller.html
@@ -137,7 +137,7 @@
 
 		.controls {
 			display: grid;
-			grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+			grid-template-columns: repeat(4, 1fr);
 			gap: 10px;
 			margin-bottom: 10px;
 		}
@@ -170,6 +170,10 @@
 			opacity: 0.6;
 			cursor: not-allowed;
 			transform: none !important;
+		}
+
+		.btn:last-child {
+			grid-column: -1/1;
 		}
 
 		.btn-primary {
@@ -249,7 +253,7 @@
 
 		#loglist {
 			width: 100%;
-			height: 250px;
+			height: 200px;
 			padding: 12px;
 			background: #1a1a2e;
 			color: #e2e2e2;
@@ -299,7 +303,7 @@
 			color: var(--gray);
 			font-size: 14px;
 			border-top: 1px solid var(--light-gray);
-			margin-top: 12px;
+			margin-top: 10px;
 		}
 
 		.device-info {
@@ -336,8 +340,8 @@
 
 		.connection-controls {
 			display: flex;
-			gap: 15px;
-			margin-bottom: 12px;
+			gap: 10px;
+			margin-bottom: 10px;
 		}
 
 		.connection-controls .btn {
@@ -390,7 +394,7 @@
 
 		.stats-grid {
 			display: grid;
-			grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+			grid-template-columns: repeat(2, 1fr);
 			gap: 12px;
 			margin-top: 12px;
 		}
@@ -400,6 +404,10 @@
 			padding: 12px;
 			border-radius: 8px;
 			border-left: 4px solid var(--primary);
+		}
+
+		.stat-item:last-child {
+			grid-column: -1/1;
 		}
 	</style>
 </head>
@@ -425,11 +433,10 @@
 			<div class="device-info" id="deviceInfo">
 				<div><strong><i class="fas fa-microchip"></i> Устройство:</strong> <span id="deviceName">Не
 						подключено</span></div>
-				<div><strong><i class="fas fa-cogs"></i> Сервис:</strong> Nordic UART Service</div>
+				<div><strong><i class="fas fa-cogs"></i> Сервис:</strong> NUS</div>
 				<div><strong><i class="fas fa-info-circle"></i> Статус:</strong> <span id="connectionText">Ожидание
 						подключения</span></div>
-				<div><strong><i class="fas fa-clock"></i> Время подключения:</strong> <span
-						id="connectionTime">--:--:--</span>
+				<div><strong><i class="fas fa-clock"></i> Время:</strong> <span id="connectionTime">--:--:--</span>
 				</div>
 			</div>
 
@@ -459,11 +466,11 @@
 			<div class="connection-stats" id="connectionStats">
 				<div class="stats-grid">
 					<div class="stat-item">
-						<span class="stat-label"><i class="fas fa-exchange-alt"></i> Отправлено команд:</span>
+						<span class="stat-label"><i class="fas fa-exchange-alt"></i> Отправлено:</span>
 						<span id="sentCommands">0</span>
 					</div>
 					<div class="stat-item">
-						<span class="stat-label"><i class="fas fa-download"></i> Получено пакетов:</span>
+						<span class="stat-label"><i class="fas fa-download"></i> Получено:</span>
 						<span class="stat-value" id="receivedPackets">0</span>
 					</div>
 					<div class="stat-item">
